[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-automation"
version = "0.1.0"
description = "API automation tests with pytest"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]

dependencies = [
    "pytest>=8.3.0",
    "requests>=2.32.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "pydantic>=2.8.2",
    "jsonschema>=4.23.0",
    "python-dotenv>=1.0.1",
    "allure-pytest>=2.13.5"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4",
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914"
]

[tool.pytest.ini_options]
addopts = "-q -ra --color=yes --strict-markers"
testpaths = ["tests"]
markers = [
    "smoke: quick checks",
    "regression: full suite",
    "contract: schema validations"
]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

